--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -7,6 +7,7 @@
     font-size: 18px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-image: linear-gradient(to top,rgb(231, 236, 233),rgb(211, 248, 248));
+    cursor: grab;
 }
 .Task > p{
     border-bottom: 1px solid rgb(153, 151, 151);
